test: test only case if Ask to raise on first round